# directory-printer

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  RELEASES.md  app.py  compile_translations.py  directory_printer.spec  pyproject.toml
.github/workflows/: release.yml
directory_printer/: i18n.py  i18n_messages.py
directory_printer/core/: configuration.py  i18n_config.py  ignore_pattern.py  printer.py
directory_printer/gui/: app.py
directory_printer/locales/en/LC_MESSAGES/: directory_printer.po
directory_printer/locales/es/LC_MESSAGES/: directory_printer.po
directory_printer/locales/zh/LC_MESSAGES/: directory_printer.po
directory_printer/scripts/: update_translations.py
directory_printer/translations/: en.json  es.json  zh.json
