[tool.poetry]
name = "directory-printer"
version = "0.3.0"
description = "A GUI application for viewing and exporting directory structures"
authors = ["ysskrishna <sivasaikrishnassk@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "directory_printer"}]

[tool.directory_printer.ui]
author_name = "ysskrishna"
author_linkedin = "https://linkedin.com/in/ysskrishna"
github_repo_url = "https://github.com/ysskrishna/directory-printer"
product_hunt_url = "https://www.producthunt.com/posts/directory-printer"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Pillow = "^10.2.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
pylint = "^3.0.0"
pre-commit = "^3.6.0"
pyinstaller = "^6.4.0"

[tool.poetry.scripts]
directory-printer = "directory_printer.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pylint.format]
max-line-length = 100
